# ssimrenderer

./: CMakeLists.txt  ssimrenderer.pro  ssimrenderer_dependents.pri  ssimrenderer_library.pro  version.cmake
examples/: CMakeLists.txt  examples.pri  examples.pro
examples/ImageMetrics/: CMakeLists.txt
examples/IntensityShapeModel/: CMakeLists.txt
examples/SimpleStatismoModel/: CMakeLists.txt  SimpleStatismoModel.cpp  SimpleStatismoModel.pro
include/: ssimrenderer.h
include/input/: lm6meshfile.h  mesh.h  plymeshfile.h  pyramid.h
include/metric/: nmicomputingopencl.h  ssdcomputingopencl.h
include/opencl/: openclwrapper.h
include/opengl/: openglwrapper.h
include/rendering/: mainrenderer.h  window.h
resources/: shaders.qrc
src/input/: statisticaldata.cpp
src/metric/: nmicomputingopencl.cpp  nmicomputingopengl.cpp  ssdcomputingopencl.cpp  ssdcomputingopengl.cpp
src/opencl/: openclwrapper.cpp
src/opengl/: openglwrapper.cpp
src/rendering/: mainrenderer.cpp
